[project]
name = "loblaw-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pandas>=3.0.3",
    "plotly>=6.8.0",
    "pyinstaller>=6.21.0",
    "scikit-learn>=1.9.0",
    "sqlalchemy>=2.0.51",
    "streamlit>=1.58.0",
]
